9 Users management :: added users list view and removing feature

--- a/src/main/resources/templates/admin/fragments/loggedOrNotLogged.html
+++ b/src/main/resources/templates/admin/fragments/loggedOrNotLogged.html
@@ -16,7 +16,7 @@
                 <ul class="dropdown">
                     <li><a th:href="@{/admin/myprofile}">Profil</a></li>
                     <li><a th:href="@{/admin/institutions}">Zarządzaj fundacjami</a></li>
-                    <li><a href="#">Zarządzaj użytkownikami</a></li>
+                    <li><a th:href="@{/admin/userslist}">Zarządzaj użytkownikami</a></li>
                     <li><a th:href="@{/admin/adminslist}">Zarządzaj adminami</a></li>
                     <li><a th:href="@{/logout}">Wyloguj</a></li>
                 </ul>
