--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -15,7 +15,7 @@
         <span th:include="admin/fragments/header :: header"></span>
     </nav>
 </header>
-<section class="help" id="institutions">
+<section class="help" id="institutions" style="max-width: 1100px">
     <h2>Zarządzaj użytkownikami</h2>
     <div class="help--slides active" data-id="1">
         <p>Poniżej znajduje się lista użytkowników. Możesz dodać, usunąć bądź edytować istniejącego użytkownika.</p>
@@ -43,7 +43,10 @@
                 <td th:text="${#temporals.format(user.created, 'yyyy-MM-dd HH:mm:SS')}" ></td>
                 <td th:text="${#temporals.format(user.last_update, 'yyyy-MM-dd HH:mm:SS')}" ></td>
                 <td th:text="${user.active}" ></td>
-                <td><a th:href="@{/admin/userslist/delete(id=${user.id})}" class="btn" style="font-size: 12px;margin-right: 2px" id="remove">Usuń</a><a th:href="@{/admin/userslist/edit(id=${user.id})}" class="btn" style="font-size: 12px" id="edit">Edytuj</a></td>
+                <td><a th:if="${user.active == true}" th:href="@{/admin/userslist/setinactive(id=${user.id})}" class="btn" style="font-size: 12px;margin-right: 2px; padding-left: 10px; padding-right: 10px" id="deactivate">Deaktywuj</a>
+                    <a th:if="${user.active == false}" th:href="@{/admin/userslist/setactive(id=${user.id})}" class="btn" style="font-size: 12px;margin-right: 2px; padding-left: 10px; padding-right: 10px" id="activate">Aktywuj</a>
+                    <a th:href="@{/admin/userslist/delete(id=${user.id})}" class="btn" style="font-size: 12px;margin-right: 2px" id="remove">Usuń</a>
+                    <a th:href="@{/admin/userslist/edit(id=${user.id})}" class="btn" style="font-size: 12px" id="edit">Edytuj</a></td>
             </tr>
             </tbody>
         </table>
