--- a/src/main/resources/templates/fragments/loggedOrNotLogged.html
+++ b/src/main/resources/templates/fragments/loggedOrNotLogged.html
@@ -16,7 +16,7 @@
             <ul class="dropdown">
                 <li><a th:href="@{/myprofile}">Profil</a></li>
                 <li><a th:href="@{/form}">Przekaż darowiznę</a></li>
-                <li><a href="#">Moje zbiórki</a></li>
+                <li><a th:href="@{/donations}">Moje zbiórki</a></li>
                 <li><a th:href="@{/logout}">Wyloguj</a></li>
             </ul>
         </li>
