--- a/src/main/resources/templates/form-confirmation.html
+++ b/src/main/resources/templates/form-confirmation.html
@@ -10,16 +10,7 @@
   <body>
     <header class="header--form-page">
       <nav class="container container--70">
-        <ul class="nav--actions">
-          <li class="logged-user">
-            Witaj Agata
-            <ul class="dropdown">
-              <li><a href="#">Profil</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="#">Wyloguj</a></li>
-            </ul>
-          </li>
-        </ul>
+        <span th:include="fragments/loggedOrNotLogged :: loggedOrNotLogged"></span>
         <span th:include="fragments/header :: header"></span>
       </nav>
 
