--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,17 +10,7 @@
   <body>
     <header class="header--form-page">
       <nav class="container container--70">
-        <ul class="nav--actions">
-          <li class="logged-user">
-            Witaj <span th:text="${userFirstName}"></span>
-            <ul class="dropdown">
-              <li><a th:href="@{/myprofile}">Profil</a></li>
-              <li><a th:href="@{/form}">Przekaż darowiznę</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a th:href="@{/logout}">Wyloguj</a></li>
-            </ul>
-          </li>
-        </ul>
+        <span th:include="fragments/loggedOrNotLogged :: loggedOrNotLogged"></span>
         <span th:include="fragments/header :: header"></span>
       </nav>
 
