14 Email sending :: use edit feature moved from controllers to service implmenetation

--- a/src/main/resources/templates/register-confirmation.html
+++ b/src/main/resources/templates/register-confirmation.html
@@ -21,7 +21,7 @@
 <section class="help" id="institutions">
     <h2>Potwierdzenie rejestracji</h2>
     <div class="help--slides active" data-id="1">
-        <p>Na podany przez Ciebie adres e-mail została wysłana wiadomość z potwierdzeniem rejstracji.</p>
+        <p>Na podany przez Ciebie adres e-mail została wysłana wiadomość zawierająca link z potwierdzeniem rejstracji. Potwierdź rejestrację w link z maila.</p>
 
         <div class="form-group form-group--buttons" style="margin-top: 10px;text-align: center; justify-content: center">
             <a th:href="@{/}" class="btn" id="goBack">Powrót do strony głównej</a>
