14 Email sending :: user can send an email via contact form

--- a/src/main/resources/templates/contact-confirmation.html
+++ b/src/main/resources/templates/contact-confirmation.html
@@ -16,9 +16,9 @@
 </header>
 
 <section class="help" id="institutions">
-    <h2>Potwierdzenie rejestracji</h2>
+    <h2>Potwierdzenie otrzymania wiadomości</h2>
     <div class="help--slides active" data-id="1">
-        <p>Na podany przez Ciebie adres e-mail została wysłana wiadomość zawierająca link z potwierdzeniem rejstracji. Potwierdź rejestrację klikająć w link.</p>
+        <p>Na podany przez Ciebie adres e-mail została wysłana wiadomość potwierdzająca odbiór Twojego zapytania.</p>
 
         <div class="form-group form-group--buttons" style="margin-top: 10px;text-align: center; justify-content: center">
             <a th:href="@{/}" class="btn" id="goBack">Powrót do strony głównej</a>
