--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,17 +5,43 @@
     <div id="contact" class="contact">
         <h2>Skontaktuj się z nami</h2>
         <h3>Formularz kontaktowy</h3>
-        <form class="form--contact">
-            <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię" /></div>
-            <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko" /></div>
-
-            <div class="form-group"><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></div>
+        <form class="form--contact" th:action="@{/contactForm}" method="post">
+            <div class="form-group form-group--50">
+                <input type="text" name="firstName" placeholder="Imię" />
+            </div>
+            <div class="form-group form-group--50">
+                <input type="text" name="lastName" placeholder="Nazwisko" />
+            </div>
+            <div class="form-group">
+                <input type="email" name="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <textarea name="message" placeholder="Wiadomość" rows="2"></textarea>
+            </div>
 
             <button class="btn" type="submit">Wyślij</button>
         </form>
+
+<!--        <form th:object="${user}" th:if="${#request.remoteUser != null}" class="form&#45;&#45;contact" th:action="@{/}" method="post">-->
+<!--            <div class="form-group form-group&#45;&#45;50">-->
+<!--                <input th:field="*{firstName}" type="text" name="name" placeholder="Imię" />-->
+<!--            </div>-->
+<!--            <div class="form-group form-group&#45;&#45;50">-->
+<!--                <input th:field="*{lastName}" type="text" name="surname" placeholder="Nazwisko" />-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <input th:field="*{email}" type="email" name="email" placeholder="Email">-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <textarea name="message" placeholder="Wiadomość" rows="2"></textarea>-->
+<!--            </div>-->
+
+<!--            <button class="btn" type="submit">Wyślij</button>-->
+<!--        </form>-->
     </div>
+
     <div class="bottom-line">
-        <span class="bottom-line--copy">Copyright &copy; 2018</span>
+        <span class="bottom-line--copy">I'll put in good hands | Copyright &copy; 2021</span>
         <div class="bottom-line--icons">
             <a href="#" class="btn btn--small"><img th:src="@{/images/icon-facebook.svg}"/></a>
             <a href="#" class="btn btn--small"><img th:src="@{/images/icon-instagram.svg}"/></a>
